fix: responsiveness on mobile devices

--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;600;700&display=swap");
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 html {
     background: $grey-5;
     font-family: "Montserrat", sans-serif;
@@ -8,7 +14,7 @@ html {
 
 body {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
